--- a/pebm/setup.cfg
+++ b/pebm/setup.cfg
@@ -4,13 +4,14 @@
 
 [metadata]
 name = pebm
+version = 0.0.7
 description = Add a short description here!
 author = SheinaG
 author_email = sheina@campus.tecnion.ac.il
 license = MIT
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/SheinaG/PEBM/tree/main/pebm
+url = https://github.com/pyscaffold/pyscaffold/
 # Add here related links, for example:
 project_urls =
     Documentation = https://pyscaffold.org/
